# jobbox

./: README  configure  configure.ac
conf/: Makefile.am  Makefile.in  jobbox_apache.conf  jobbox_server.conf
doc/: Install4AWS.txt  Install4Centos6.txt  Install4Centos7.txt  Winrm4WidnowsServer2012.txt
frontends/config/: database.yml
frontends/db/: seeds.rb
include/: calendar.h  calendar_date.h  charset.h  clockjob.h  common.h  condition.h  config.h  configure.h  connector.h  datecond.h  datejob.h  execlog.h  jbxarg.h  jbxconf.h  jbxdb.h  jbxjoblog.h  jbxlog.h  jbxpid.h  jbxssh.h  jbxwsman.h  jobresult.h  jobunit.h  models.h  rootjobnet.h  schedule.h  sleepjob.h  sshjob.h  vardatum.h  variable.h  version.h  winjob.h
misc/init.d/: jobbox-server
misc/system/: jobbox-server.service
src/: Makefile.am  Makefile.in
src/jobbox_server/: Makefile.am  Makefile.in  server.c
src/jobbox_server/bootstrap/: Makefile.in  bootstrap.c  bootstrap.h
src/jobbox_server/executive/: Makefile.in  executive.c  executive.h
src/jobbox_server/expander/: Makefile.in  expander.c  expander.h
src/jobbox_server/housekeeper/: Makefile.in  housekeeper.c  housekeeper.h
src/jobbox_server/loader/: Makefile.in  loader.c  loader.h
src/jobbox_server/monitor/: Makefile.in  monitor.c  monitor.h
src/libs/models/: Makefile.am  Makefile.in  calendar.c  calendar_date.c  clockjob.c  condition.c  configure.c  connector.c  datecond.c  datejob.c  execlog.c  jbxjoblog.c  jobresult.c  jobunit.c  rootjobnet.c  schedule.c  sleepjob.c  sshjob.c  vardatum.c  variable.c  winjob.c
(+301 files in other folders)
