noinst_LIBRARIES = libjbxmodels.a

libjbxmodels_a_SOURCES = \
    jobunit.c \
    rootjobnet.c \
    schedule.c \
    connector.c \
    variable.c \
    sleepjob.c \
    clockjob.c \
    datejob.c \
    datecond.c \
    vardatum.c \
    sshjob.c \
    winjob.c \
    condition.c \
    jobresult.c \
    execlog.c \
    jbxjoblog.c \
    calendar.c \
    calendar_date.c \
    configure.c
